[gd_scene format=3 uid="uid://6dgkm3y8rqlj"]

[ext_resource type="Script" path="res://scripts/level_complete_overlay.gd" id="1_script"]

[node name="LevelCompleteOverlay" type="CanvasLayer" unique_id=1925799487]
layer = 10
script = ExtResource("1_script")

[node name="Backdrop" type="ColorRect" parent="." unique_id=1943590755]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1476130712]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer" unique_id=1256077955]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel" unique_id=448747760]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer" unique_id=333530636]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Level Complete!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer" unique_id=259841278]
layout_mode = 2

[node name="PlayersLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer" unique_id=383446039]
unique_name_in_owner = true
layout_mode = 2
text = "Players:"
horizontal_alignment = 1

[node name="PlayersContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer" unique_id=1280899573]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/VBoxContainer" unique_id=1709586554]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="CenterContainer/Panel/VBoxContainer" unique_id=1041883414]
unique_name_in_owner = true
layout_mode = 2
text = "Ready for Next Level"

[node name="NextLevelButton" type="Button" parent="CenterContainer/Panel/VBoxContainer" unique_id=1635995303]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Next Level"

[node name="StatusLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer" unique_id=671238364]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
